--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase": "^9.8.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
