--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.2",
     "next": "12.1.6",
+    "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
