--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "socket.io-client": "^4.5.1",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
