--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@reduxjs/toolkit": "^1.8.2",
+    "antd": "^4.22.4",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "node-sass": "^7.0.1",
