--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "^8.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "sweetalert": "^2.1.2"
